--- a/BaseApi/build.gradle
+++ b/BaseApi/build.gradle
@@ -1,19 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
-    namespace 'cn.yuanfengshan.apiserver'
-    compileSdk 33
+    namespace 'cn.yuanfengshan.api.base'
+    compileSdk 32
 
     defaultConfig {
-        applicationId "cn.yuanfengshan.apiserver"
         minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,12 +30,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation project(":module1")
-    implementation project(":module2")
-    implementation project(":BaseApi")
+    api project(":ApiServer")
 }
