--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,6 @@ dependencyResolutionManagement {
 rootProject.name = "ApiServer"
 include ':app'
 include ':ApiServer'
+include ':module1'
+include ':module2'
+include ':BaseApi'
