--- a/ApiServer/build.gradle
+++ b/ApiServer/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
+    id 'signing'
 }
+
+def VERSION = "1.0.0"
 
 android {
     namespace 'cn.yuanfengshan.base'
@@ -9,8 +13,9 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 32
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionCode 1
+        versionName VERSION
+        flavorDimensions "versionCode"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -24,13 +29,142 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    //  修改打包命名规则
+    android.libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = project.name + "_${defaultConfig.versionName}" + '.aar'
+        }
+    }
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+//    implementation 'androidx.appcompat:appcompat:1.6.0'
 }
+
+println("检查仓库账号信息")
+println("ossrhUsername：${ossrhUsername}")
+println("ossrhPassword：${ossrhPassword}")
+
+
+def ossHead = "https://s01.oss.sonatype.org"
+def customArtifactId="ApiServer"
+afterEvaluate {
+    publishing {
+        repositories {
+            maven {
+                name "local"
+                url = "$buildDir/repo"
+            }
+            maven {
+                allowInsecureProtocol(true)
+                name "sonartype-Staging"
+                url = "${ossHead}/service/local/staging/deploy/maven2"
+                println("${name}仓库上传的地址:${url}")
+                credentials {
+                    username = ossrhUsername
+                    password = ossrhPassword
+                }
+            }
+            // 定义snapshot仓库
+            maven {
+                allowInsecureProtocol(true)
+                name "sonatype-Snapshots"
+                // change to point to your repo, e.g. http://my.org/repo
+                url = "${ossHead}/content/repositories/snapshots/"
+                println("${name}仓库上传的地址:${url}")
+                credentials {
+                    username = ossrhUsername
+                    password = ossrhPassword
+                }
+            }
+        }
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+//                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'io.github.yuanfengshan'
+                artifactId = customArtifactId
+                version = VERSION
+                pom {
+                    name = 'ApiServer Android Plugin Framework'
+                    description = 'A Android Plugin Framework'
+                    url = 'https://github.com/YuanFengShan/ApiServer'
+                    licenses {
+                        license {
+                            name = 'The Apache Software License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'yuanfengshan'
+                            name = 'yuanfengshan'
+                            email = '645633369@qq.com'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git:git://github.com/YuanFengShan/ApiServer.git'
+                        developerConnection = 'scm:git:git://github.com/YuanFengShan/ApiServer.git'
+                        url = 'https://github.com/YuanFengShan/ApiServer'
+                    }
+                }
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
+
+
+                groupId = 'io.github.yuanfengshan'
+                artifactId = customArtifactId
+                version = String.format("%s-SNAPSHOT", VERSION)
+
+                pom {
+                    name = 'FSUtils Android Plugin Framework'
+                    description = 'A Android Plugin Framework'
+                    url = 'https://github.com/YuanFengShan/FSUtils'
+                    licenses {
+                        license {
+                            name = 'The Apache Software License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'yuanfengshan'
+                            name = 'yuanfengshan'
+                            email = '645633369@qq.com'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git:git://github.com/YuanFengShan/ApiServer.git'
+                        developerConnection = 'scm:git:git://github.com/YuanFengShan/ApiServer.git'
+                        url = 'https://github.com/YuanFengShan/ApiServer'
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set("sources")
+}
+signing {
+    sign publishing.publications
+}
+
+//打包main目录下代码和资源的 task
+task androidSourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
