--- a/BaseApi/build.gradle
+++ b/BaseApi/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    api project(":ApiServer")
+//    api project(":ApiServer")
+//    api 'io.github.yuanfengshan:ApiServer:1.0.0'
+    api 'io.github.yuanfengshan:ApiServer:1.0.0'
 }
